--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,5 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@import "./components/CustomDateRange/styled.scss";
