--- a/src/components/CustomDateRange/styled.scss
+++ b/src/components/CustomDateRange/styled.scss
@@ -3,11 +3,72 @@
   box-sizing: border-box;
   box-shadow: 0px 12px 24px rgba(97, 97, 78, 0.1);
   border-radius: 8px;
+  &:before {
+    display: none;
+  }
+  &:after {
+    display: none;
+  }
+
+  .drp-calendar {
+    &.left {
+      padding: 36px 24px 36px 48px;
+    }
+    &.right {
+      padding: 36px 48px 36px 24px;
+    }
+  }
+
+  .calendar-table {
+    color: #393f3e;
+    .prev,
+    .next {
+      // border: 1px solid #d8d8d4;
+      box-sizing: border-box;
+      box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1),
+        inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+      border-radius: 4px;
+      &:hover {
+        span {
+          border-color: #18bc9c;
+        }
+      }
+    }
+    .prev span,
+    .next span {
+      border-color: #9aa09e;
+      border-width: 0 1.5px 1.5px 0;
+    }
+    thead {
+      th {
+        height: 32px;
+        color: #747978;
+      }
+    }
+    tbody {
+      td {
+        width: 32px;
+        height: 32px;
+        border-radius: 4px;
+        font-size: 14px;
+        font-weight: 500;
+
+        &.in-range {
+          background: #e4f4f1;
+        }
+
+        &.active {
+          background: #18bc9c;
+        }
+      }
+    }
+  }
 }
 
 .btn-date-range-dropdown {
-  padding: 12px 16px;
   display: flex;
+  height: 40px;
+  padding: 12px 16px;
   align-items: center;
   justify-content: flex-start;
   border: 1px solid #d8d8d4;
